Attempt to fix scrollbar glitch

--- a/frontend/src/scss/layout/_layout.scss
+++ b/frontend/src/scss/layout/_layout.scss
@@ -11,7 +11,7 @@ html {
             flex-wrap: wrap;
             width: min(100vw, 1020px);
             overflow-x: hidden;
-            margin: -16px;
+            margin: -16px 0;
 
             & > * {
                 margin: 16px;
